syntax = "proto3";


package shipment;

service ShipmentService {
  rpc CreateShipment (ShipmentCreateDTO) returns (ShipmentByIdDTO);
  rpc GetShipmentById (ShipmentByIdDTO) returns (ShipmentDTO);
  rpc GetAll (EmptyMessage) returns (ListShipmentDTO);
  rpc GetByDate(GetShipmentByDateRequest) returns (ListShipmentDTO);
}

message ListShipmentDTO {
	repeated ShipmentDTO shipments = 1;
}


message ShipmentCreateDTO {
	int32 id_vehicle = 1;
	int32 id_route = 2;
	int32 material = 3;
	double quantity = 4;
}

message EmptyMessage {

}

message GetShipmentByDateRequest {
	int32 option_date = 1;
}

message ShipmentByIdDTO {
	int32 id = 1;
}

message ShipmentDTO {
	int32 id= 1;
	int32 id_vehicle = 2;
	int32 id_route = 3;
	int32 state = 4;
	int32 material = 5;
	double quantity = 6;
	optional string date_delivered = 7;
}

message ErrorResponse  {
	string name = 1;
	repeated string details = 2;
}
